# PatternRecognitioner

./: CMakeLists.txt  PatternRecognitioner.cpp  PatternRecognitioner.h  README.md  Recognizer.cpp  Recognizer.h  helper.h  input.pt  main.cpp  util.cpp  util.h
